--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ project to gain inner satisfaction and learn a lot about embedded OS programming
 
 <p>As is the BBB Sys. Ref. manual (SRM)</p>
 
-<p>A copy of the ARM System Developers Guide is also required to understand ARM assembly.</p>
+<p>A copy of the ARM System Developers Guide is also required to understand ARM assembly.
+Or better still use the ARM Cortex A series programmers guide - <a href="http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.den0013d/index.html">http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.den0013d/index.html</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mutex023/dhARMa">dhARMa</a> is maintained by <a href="https://github.com/mutex023">mutex023</a>.</span>
