--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@ project to gain inner satisfaction and learn a lot about embedded OS programming
 
 <p>As is the BBB Sys. Ref. manual (SRM)</p>
 
-<p>The following documents are required to code/understand ARM assembly:
-[1] ARM System Developers Guide
-[2] ARM Cortex A series programmers guide - <a href="http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.den0013d/index.html">http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.den0013d/index.html</a>
-[3] ARM v7-A Architecture Reference Manual - <a href="http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0406c/index.html">http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0406c/index.html</a></p>
+<p>The following documents are required to code/understand ARM assembly:</p>
+
+<p>[1] ARM System Developers Guide</p>
+
+<p>[2] ARM Cortex A series programmers guide - <a href="http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.den0013d/index.html">http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.den0013d/index.html</a></p>
+
+<p>[3] ARM v7-A Architecture Reference Manual - <a href="http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0406c/index.html">http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0406c/index.html</a></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/mutex023">mutex023</a></p>
