--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 being written from scratch. This is going to be a life long
 project to gain inner satisfaction and learn a lot about embedded OS programming.</p>
 
-<p>Get the ARM cross compiler toolchain from here : <a href="https://launchpad.net/gcc-arm-embedded">https://launchpad.net/gcc-arm-embedded</a></p>
+<p>Get the ARM cross compiler toolchain from here : <a href="http://elinux.org/ARMCompilers">http://elinux.org/ARMCompilers</a></p>
 
 <p>The TI AM335x Cortex A8 (Sitara) Technical Ref. manual (TRM) is very much required.</p>
 
